feat: ui of signin and signup (#30)
* init

* Update react native type

* update theme color

* Change modal presentation to full screen

* Update ui button

* Follow up button ui change

* add stringhelper

* design authentication

* remove error capability of textinput

* remove saving credential store as if can be unsecure

* fix node binary import

* restore env.example

* remove unused props

* linting

* Update TextInput and add test

* introducing checkbox

* Create CheckBox component with few test

* Making some changes from github review

* restore project.pbxproj

* restore original version

* restore origina signup web

* add validator as esModules in jest.config

* update snapshot

* implement forgotpassword screen

* make transition view on forgotPassword

* Introduce form component

* update svg (version 13 require for futur fabric migration)

* next config to handle svg and validator

* type  submit not working on web.

* restore replace on web

* cannot make form web working

* use ratio on stoke width

* add i18n on auth screen

* linting

* lint & build

* update checkbox snpashot after updating stroke width

* remove spcified simulator in package

* improve mock with hook (pr waiting in lib)

* setting up jest for Screen

* remove snapshot and add more test on screen

* some fix

* some fix

* update accessiblity role

* wip

* renaming font500 to fontMedium to respect font naming

* Improve button and test

* more clean test

* fix comment from PR

* fix compiolation test due to reanimated2

* remove useEffect. need more test to proove it is usefull

* update button component and add some test

* linter

* tupo

* fix type and use mock for reanimated transition

--- a/packages/i18n/compiled/app/en.json
+++ b/packages/i18n/compiled/app/en.json
@@ -1,8 +1,140 @@
 {
+  "+2LHYI": [
+    {
+      "type": 0,
+      "value": "Please enter a valid email"
+    }
+  ],
+  "+TJPaq": [
+    {
+      "type": 0,
+      "value": "Email Address"
+    }
+  ],
+  "0avf3W": [
+    {
+      "type": 0,
+      "value": "You need to accept the Terms of services & privacy policy"
+    }
+  ],
+  "1UGgMw": [
+    {
+      "type": 0,
+      "value": "Sign Up"
+    }
+  ],
+  "1cQrMk": [
+    {
+      "type": 0,
+      "value": "Forgot your password?"
+    }
+  ],
+  "4RJ0I8": [
+    {
+      "type": 0,
+      "value": "Password"
+    }
+  ],
+  "4so7Pr": [
+    {
+      "type": 0,
+      "value": "Check your emails !"
+    }
+  ],
+  "69Fl8v": [
+    {
+      "type": 0,
+      "value": "At least 8 caracters, 1upper, 1 lower 1 digit"
+    }
+  ],
+  "8mCCVu": [
+    {
+      "type": 0,
+      "value": "Email Address"
+    }
+  ],
+  "96x4pb": [
+    {
+      "type": 0,
+      "value": "Back to Log In"
+    }
+  ],
+  "Bm4p42": [
+    {
+      "type": 0,
+      "value": "We just send you a link to create a new password"
+    }
+  ],
+  "DWnvYf": [
+    {
+      "type": 0,
+      "value": "Reset password"
+    }
+  ],
+  "DgczNZ": [
+    {
+      "type": 0,
+      "value": "Log In"
+    }
+  ],
+  "FPsHDW": [
+    {
+      "type": 0,
+      "value": "Sign Up"
+    }
+  ],
+  "G3pknE": [
+    {
+      "type": 0,
+      "value": "I agree to the"
+    }
+  ],
+  "GvowiA": [
+    {
+      "type": 0,
+      "value": "Forgot your password ?"
+    }
+  ],
+  "PDfRjc": [
+    {
+      "type": 0,
+      "value": "privacy policy"
+    }
+  ],
+  "PEHtPw": [
+    {
+      "type": 0,
+      "value": "Enter your email address and we'll send you a link to create a new password"
+    }
+  ],
+  "QuRr//": [
+    {
+      "type": 0,
+      "value": "Don't have an account"
+    }
+  ],
+  "V2RVO7": [
+    {
+      "type": 0,
+      "value": "Terms of services"
+    }
+  ],
+  "Y+Ob8P": [
+    {
+      "type": 0,
+      "value": "Please enter a valid email address"
+    }
+  ],
   "Y7sr+4": [
     {
       "type": 0,
       "value": "Sign Up"
+    }
+  ],
+  "h0jHxq": [
+    {
+      "type": 0,
+      "value": "Password"
     }
   ],
   "izbcMX": [
@@ -11,16 +143,52 @@
       "value": "Sign In"
     }
   ],
+  "l29LyJ": [
+    {
+      "type": 0,
+      "value": "Please enter a valid email"
+    }
+  ],
+  "lsO83S": [
+    {
+      "type": 0,
+      "value": "Please enter a password"
+    }
+  ],
+  "nufnAH": [
+    {
+      "type": 0,
+      "value": "Email Address"
+    }
+  ],
   "ny70pU": [
     {
       "type": 0,
       "value": "logout"
     }
   ],
+  "pBqrA+": [
+    {
+      "type": 0,
+      "value": "Already have an account?"
+    }
+  ],
   "sSVrVw": [
     {
       "type": 0,
       "value": "Sign Up"
+    }
+  ],
+  "wvXg6E": [
+    {
+      "type": 0,
+      "value": "I accept with"
+    }
+  ],
+  "xl/PxL": [
+    {
+      "type": 0,
+      "value": "Log In"
     }
   ]
 }
