--- a/packages/i18n/pagesMessagesDependencies.json
+++ b/packages/i18n/pagesMessagesDependencies.json
@@ -7,6 +7,28 @@
         "acL7Jg",
         "jNRxDl"
     ],
-    "signin": [],
-    "signup": []
+    "signin": [
+        "+2LHYI",
+        "+TJPaq",
+        "1UGgMw",
+        "1cQrMk",
+        "4RJ0I8",
+        "QuRr//",
+        "lsO83S",
+        "xl/PxL"
+    ],
+    "signup": [
+        "0avf3W",
+        "69Fl8v",
+        "DgczNZ",
+        "FPsHDW",
+        "G3pknE",
+        "PDfRjc",
+        "V2RVO7",
+        "Y+Ob8P",
+        "h0jHxq",
+        "nufnAH",
+        "pBqrA+",
+        "wvXg6E"
+    ]
 }
