--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -1,18 +1,130 @@
 {
+  "+2LHYI": {
+    "defaultMessage": "Please enter a valid email",
+    "description": "SigninScreen - error message when input usernameOrEmail is empty"
+  },
+  "+TJPaq": {
+    "defaultMessage": "Email Address",
+    "description": "Signin Screen email address input placeholder"
+  },
+  "0avf3W": {
+    "defaultMessage": "You need to accept the Terms of services & privacy policy",
+    "description": "Signup Screen - error message when TOS or PP are not checked"
+  },
+  "1UGgMw": {
+    "defaultMessage": "Sign Up",
+    "description": "SigninScreen - Sign Up"
+  },
+  "1cQrMk": {
+    "defaultMessage": "Forgot your password?",
+    "description": "SigninScreen - Forgot your password?"
+  },
+  "4RJ0I8": {
+    "defaultMessage": "Password",
+    "description": "Password input placeholder"
+  },
+  "4so7Pr": {
+    "defaultMessage": "Check your emails !",
+    "description": "ForgotPasswordScreen - Check your emails !"
+  },
+  "69Fl8v": {
+    "defaultMessage": "At least 8 caracters, 1upper, 1 lower 1 digit",
+    "description": "SignupScreen - error message when password is not valid"
+  },
+  "8mCCVu": {
+    "defaultMessage": "Email Address",
+    "description": "ForgotpasswordScreen - Email Address"
+  },
+  "96x4pb": {
+    "defaultMessage": "Back to Log In",
+    "description": "ForgotPasswordScreen - Back to Log In bottom screen link"
+  },
+  "Bm4p42": {
+    "defaultMessage": "We just send you a link to create a new password",
+    "description": "ForgotPasswordScreen - email send indication"
+  },
+  "DWnvYf": {
+    "defaultMessage": "Reset password",
+    "description": "ForgotpasswordScreen - Reset password"
+  },
+  "DgczNZ": {
+    "defaultMessage": "Log In",
+    "description": "Signup Screen - Login link bottom screen"
+  },
+  "FPsHDW": {
+    "defaultMessage": "Sign Up",
+    "description": "Signup Screen - Sign Up button"
+  },
+  "G3pknE": {
+    "defaultMessage": "I agree to the",
+    "description": "Signup Screen - I agree to the TOS first part"
+  },
+  "GvowiA": {
+    "defaultMessage": "Forgot your password ?",
+    "description": "ForgotPasswordScreen - Forgot your password  title"
+  },
+  "PDfRjc": {
+    "defaultMessage": "privacy policy",
+    "description": "Signup Screen - privacy policy link"
+  },
+  "PEHtPw": {
+    "defaultMessage": "Enter your email address and we'll send you a link to create a new password",
+    "description": "ForgotPasswordScreen - Forgot your password description"
+  },
+  "QuRr//": {
+    "defaultMessage": "Don't have an account",
+    "description": "SigninScreen - Don't have an account"
+  },
+  "V2RVO7": {
+    "defaultMessage": "Terms of services",
+    "description": "Signup Screen - Terms of Service link"
+  },
+  "Y+Ob8P": {
+    "defaultMessage": "Please enter a valid email address",
+    "description": "SignupScreen - error message when input doest not validate as an email"
+  },
   "Y7sr+4": {
     "defaultMessage": "Sign Up",
     "description": "sign up link"
+  },
+  "h0jHxq": {
+    "defaultMessage": "Password",
+    "description": "Signup Screen - password"
   },
   "izbcMX": {
     "defaultMessage": "Sign In",
     "description": "sign in link"
   },
+  "l29LyJ": {
+    "defaultMessage": "Please enter a valid email",
+    "description": "ForgotpasswordScreen - error message when input doest not validate as an email"
+  },
+  "lsO83S": {
+    "defaultMessage": "Please enter a password",
+    "description": "SigninScreen - error message when input password is empty"
+  },
+  "nufnAH": {
+    "defaultMessage": "Email Address",
+    "description": "Signup Screen - email address input placeholder"
+  },
   "ny70pU": {
     "defaultMessage": "logout",
     "description": "logout link"
   },
+  "pBqrA+": {
+    "defaultMessage": "Already have an account?",
+    "description": "Signup Screen - Already have an account?"
+  },
   "sSVrVw": {
     "defaultMessage": "Sign Up",
     "description": "Home screen sign up button label"
+  },
+  "wvXg6E": {
+    "defaultMessage": "I accept with",
+    "description": "Signup Screen - I accept with PP first part"
+  },
+  "xl/PxL": {
+    "defaultMessage": "Log In",
+    "description": "Password input placeholder"
   }
 }
