--- a/packages/i18n/pagesMessagesDependencies.json
+++ b/packages/i18n/pagesMessagesDependencies.json
@@ -7,6 +7,18 @@
         "acL7Jg",
         "jNRxDl"
     ],
+    "search": [
+        "0C3U4p",
+        "ABAFDF",
+        "uvBCJV",
+        "5/HOhV",
+        "8PT+FO",
+        "CCbp9S",
+        "SmWLhs",
+        "n8Bdhz",
+        "p042gg",
+        "KOjOOw"
+    ],
     "signin": [
         "+2LHYI",
         "+TJPaq",
