--- a/packages/i18n/pagesMessagesDependencies.json
+++ b/packages/i18n/pagesMessagesDependencies.json
@@ -1,5 +1,6 @@
 {
     "[userName]": [
+        "AEQg5t",
         "7HPaV3",
         "Vh3DQb",
         "a17Y8A",
@@ -29,16 +30,22 @@
         "g7w55v",
         "hc+1uI",
         "rKml3z",
+        "ParXIq",
         "gXvULC",
         "y37Ei7",
         "JcQ1BH",
         "wMsxl3",
         "wfjPDR",
         "wkQ0bm",
-        "zMaylR"
+        "zMaylR",
+        "BJRz8L",
+        "gL9Uhd",
+        "mfzT2i"
     ],
     "home": [
-        "sSVrVw"
+        "AEQg5t",
+        "sSVrVw",
+        "v3DENk"
     ],
     "index": [
         "acL7Jg",
@@ -46,8 +53,14 @@
     ],
     "search": [
         "0C3U4p",
+        "19LN22",
+        "UIZoTQ",
+        "nJgiur",
         "ABAFDF",
+        "pGovG7",
         "uvBCJV",
+        "ymtf7H",
+        "AEQg5t",
         "5/HOhV",
         "8PT+FO",
         "CCbp9S",
@@ -63,11 +76,13 @@
         "1cQrMk",
         "4RJ0I8",
         "QuRr//",
+        "eNyb4j",
         "lsO83S",
         "xl/PxL"
     ],
     "signup": [
         "0avf3W",
+        "1ETO0L",
         "69Fl8v",
         "DgczNZ",
         "FPsHDW",
