Migrate to next 13 app directory (#71)
* Migrate to next 13 app directory

* PR feedbacks

--- a/packages/i18n/compiled/app/fr.json
+++ b/packages/i18n/compiled/app/fr.json
@@ -17,6 +17,12 @@
       "value": "Cancel"
     }
   ],
+  "0AvByP": [
+    {
+      "type": 0,
+      "value": "Noir"
+    }
+  ],
   "0C3U4p": [
     {
       "type": 0,
@@ -27,6 +33,18 @@
     {
       "type": 0,
       "value": "You need to accept the Terms of services & privacy policy"
+    }
+  ],
+  "19LN22": [
+    {
+      "type": 0,
+      "value": "Tap to cancel your search"
+    }
+  ],
+  "1ETO0L": [
+    {
+      "type": 0,
+      "value": "Tap to sign up"
     }
   ],
   "1UGgMw": [
@@ -77,6 +95,12 @@
       "value": "Allow Azzapp to access your photos"
     }
   ],
+  "6j49Wn": [
+    {
+      "type": 0,
+      "value": "Negative"
+    }
+  ],
   "74j5Wg": [
     {
       "type": 0,
@@ -113,16 +137,40 @@
       "value": "Recent searchs"
     }
   ],
+  "AEQg5t": [
+    {
+      "type": 0,
+      "value": "Tap me to show the QR Code fullscreen"
+    }
+  ],
   "AsCp0n": [
     {
       "type": 0,
       "value": "Validate"
     }
   ],
+  "BFnUrJ": [
+    {
+      "type": 0,
+      "value": "Process"
+    }
+  ],
+  "BJRz8L": [
+    {
+      "type": 0,
+      "value": "Tap to close"
+    }
+  ],
   "Bm4p42": [
     {
       "type": 0,
       "value": "We just send you a link to create a new password"
+    }
+  ],
+  "C1R1bc": [
+    {
+      "type": 0,
+      "value": "Fade"
     }
   ],
   "CCbp9S": [
@@ -185,6 +233,12 @@
       "value": "Next"
     }
   ],
+  "P2PER8": [
+    {
+      "type": 0,
+      "value": "Sepia"
+    }
+  ],
   "PDfRjc": [
     {
       "type": 0,
@@ -197,10 +251,22 @@
       "value": "Enter your email address and we'll send you a link to create a new password"
     }
   ],
+  "ParXIq": [
+    {
+      "type": 0,
+      "value": "Select and display the album"
+    }
+  ],
   "PjYjnk": [
     {
       "type": 0,
       "value": "Ok"
+    }
+  ],
+  "PmtfGE": [
+    {
+      "type": 0,
+      "value": "Documentary"
     }
   ],
   "QuRr//": [
@@ -213,6 +279,12 @@
     {
       "type": 0,
       "value": "Trending posts"
+    }
+  ],
+  "UIZoTQ": [
+    {
+      "type": 0,
+      "value": "Enter your search word"
     }
   ],
   "V2RVO7": [
@@ -269,10 +341,28 @@
       "value": "Highlights"
     }
   ],
+  "dl8CRm": [
+    {
+      "type": 0,
+      "value": "Posterize"
+    }
+  ],
   "dqGjrZ": [
     {
       "type": 0,
       "value": "Structure"
+    }
+  ],
+  "dzmRcf": [
+    {
+      "type": 0,
+      "value": "Transfer"
+    }
+  ],
+  "eNyb4j": [
+    {
+      "type": 0,
+      "value": "Tap to sign in"
     }
   ],
   "ebisVt": [
@@ -293,6 +383,12 @@
       "value": "Access to your camera allows you to take photos and record videos. Access to the microphone allows you to record videos."
     }
   ],
+  "gL9Uhd": [
+    {
+      "type": 0,
+      "value": "Tap to edit your profile"
+    }
+  ],
   "gRy2ak": [
     {
       "type": 0,
@@ -303,6 +399,12 @@
     {
       "type": 0,
       "value": "Latest"
+    }
+  ],
+  "gpYU75": [
+    {
+      "type": 0,
+      "value": "Tap to reset your passward"
     }
   ],
   "h0jHxq": [
@@ -341,10 +443,22 @@
       "value": "Please enter a password"
     }
   ],
+  "mfzT2i": [
+    {
+      "type": 0,
+      "value": "Tap to follow the profile"
+    }
+  ],
   "n8Bdhz": [
     {
       "type": 0,
       "value": "See all"
+    }
+  ],
+  "nJgiur": [
+    {
+      "type": 0,
+      "value": "Tap to clear your search"
     }
   ],
   "nMtsXg": [
@@ -383,10 +497,30 @@
       "value": "Already have an account?"
     }
   ],
+  "pGovG7": [
+    {
+      "type": 0,
+      "value": "Top to remove "
+    },
+    {
+      "type": 1,
+      "value": "word"
+    },
+    {
+      "type": 0,
+      "value": " from history"
+    }
+  ],
   "pqxK1C": [
     {
       "type": 0,
       "value": "Contrast"
+    }
+  ],
+  "q/ZByJ": [
+    {
+      "type": 0,
+      "value": "Thermal"
     }
   ],
   "qyCo80": [
@@ -413,6 +547,12 @@
       "value": "Sign Up"
     }
   ],
+  "uNR58P": [
+    {
+      "type": 0,
+      "value": "Chrome"
+    }
+  ],
   "ukFVmp": [
     {
       "type": 0,
@@ -427,6 +567,24 @@
     {
       "type": 1,
       "value": "word"
+    }
+  ],
+  "v3DENk": [
+    {
+      "type": 0,
+      "value": "Tap to sign up"
+    }
+  ],
+  "v4LP9H": [
+    {
+      "type": 0,
+      "value": "Instant"
+    }
+  ],
+  "vC6hy9": [
+    {
+      "type": 0,
+      "value": "X-ray"
     }
   ],
   "vDm98w": [
@@ -481,6 +639,22 @@
     {
       "type": 0,
       "value": "Select an album"
+    }
+  ],
+  "ymtf7H": [
+    {
+      "type": 0,
+      "value": "Tap to search for "
+    },
+    {
+      "type": 1,
+      "value": "word"
+    }
+  ],
+  "z7TgL0": [
+    {
+      "type": 0,
+      "value": "Tonal"
     }
   ],
   "zMaylR": [
