--- a/packages/i18n/src/app/fr.json
+++ b/packages/i18n/src/app/fr.json
@@ -11,6 +11,10 @@
     "defaultMessage": "Cancel",
     "description": "Cancel button in Image edition screen"
   },
+  "0AvByP": {
+    "defaultMessage": "Noir",
+    "description": "Noir photo filter name"
+  },
   "0C3U4p": {
     "defaultMessage": "Cancel",
     "description": "SearchBar - Cancel button"
@@ -18,6 +22,14 @@
   "0avf3W": {
     "defaultMessage": "You need to accept the Terms of services & privacy policy",
     "description": "Signup Screen - error message when TOS or PP are not checked"
+  },
+  "19LN22": {
+    "defaultMessage": "Tap to cancel your search",
+    "description": "SearchBar accessibilityLabel Cancel Button"
+  },
+  "1ETO0L": {
+    "defaultMessage": "Tap to sign up",
+    "description": "Signup Screen - AccessibilityLabel Sign Up button"
   },
   "1UGgMw": {
     "defaultMessage": "Sign Up",
@@ -51,6 +63,10 @@
     "defaultMessage": "Allow Azzapp to access your photos",
     "description": "Camera authorization screen title for photos permission"
   },
+  "6j49Wn": {
+    "defaultMessage": "Negative",
+    "description": "Negative photo filter name"
+  },
   "74j5Wg": {
     "defaultMessage": "Access to the photos allows you to create publications.",
     "description": "Camera authorization screen content for photos permission"
@@ -75,13 +91,29 @@
     "defaultMessage": "Recent searchs",
     "description": "ResetSearch - title "
   },
+  "AEQg5t": {
+    "defaultMessage": "Tap me to show the QR Code fullscreen",
+    "description": "CoverLayout - Accessibility Qr code button"
+  },
   "AsCp0n": {
     "defaultMessage": "Validate",
     "description": "Validate button in Image edition screen"
   },
+  "BFnUrJ": {
+    "defaultMessage": "Process",
+    "description": "Process photo filter name"
+  },
+  "BJRz8L": {
+    "defaultMessage": "Tap to close",
+    "description": "BottomSheet - close button"
+  },
   "Bm4p42": {
     "defaultMessage": "We just send you a link to create a new password",
     "description": "ForgotPasswordScreen - email send indication"
+  },
+  "C1R1bc": {
+    "defaultMessage": "Fade",
+    "description": "Fade photo filter name"
   },
   "CCbp9S": {
     "defaultMessage": "Trending profiles",
@@ -123,6 +155,10 @@
     "defaultMessage": "Next",
     "description": "Next button label in image picker wizzard"
   },
+  "P2PER8": {
+    "defaultMessage": "Sepia",
+    "description": "Sepia photo filter name"
+  },
   "PDfRjc": {
     "defaultMessage": "privacy policy",
     "description": "Signup Screen - privacy policy link"
@@ -131,9 +167,17 @@
     "defaultMessage": "Enter your email address and we'll send you a link to create a new password",
     "description": "ForgotPasswordScreen - Forgot your password description"
   },
+  "ParXIq": {
+    "defaultMessage": "Select and display the album",
+    "description": "Album Picker - Accessibliity label button select album"
+  },
   "PjYjnk": {
     "defaultMessage": "Ok",
     "description": "Ok button label in post creation text edition modal"
+  },
+  "PmtfGE": {
+    "defaultMessage": "Documentary",
+    "description": "Documentary photo filter name"
   },
   "QuRr//": {
     "defaultMessage": "Don't have an account",
@@ -142,6 +186,10 @@
   "SmWLhs": {
     "defaultMessage": "Trending posts",
     "description": "SearchPage - Trending posts title"
+  },
+  "UIZoTQ": {
+    "defaultMessage": "Enter your search word",
+    "description": "Seach bar - accessibility label"
   },
   "V2RVO7": {
     "defaultMessage": "Terms of services",
@@ -179,9 +227,21 @@
     "defaultMessage": "Highlights",
     "description": "Highlights image edition parameters name"
   },
+  "dl8CRm": {
+    "defaultMessage": "Posterize",
+    "description": "Posterize photo filter name"
+  },
   "dqGjrZ": {
     "defaultMessage": "Structure",
     "description": "Structure image edition parameters name"
+  },
+  "dzmRcf": {
+    "defaultMessage": "Transfer",
+    "description": "Transfer photo filter name"
+  },
+  "eNyb4j": {
+    "defaultMessage": "Tap to sign in",
+    "description": "Signin Screen - AccessibilityLabel Sign In button"
   },
   "ebisVt": {
     "defaultMessage": "Adjust",
@@ -195,6 +255,10 @@
     "defaultMessage": "Access to your camera allows you to take photos and record videos. Access to the microphone allows you to record videos.",
     "description": "Camera authorization screen content for camera permission"
   },
+  "gL9Uhd": {
+    "defaultMessage": "Tap to edit your profile",
+    "description": "UserScreenButtonBar edit button accessibility label"
+  },
   "gRy2ak": {
     "defaultMessage": "Vigneting",
     "description": "Vigneting image edition parameters name"
@@ -202,6 +266,10 @@
   "gXvULC": {
     "defaultMessage": "Latest",
     "description": "Latest photos album title in image wizzard album selection "
+  },
+  "gpYU75": {
+    "defaultMessage": "Tap to reset your passward",
+    "description": "ForgotPassword Screen - AccessibilityLabel Reset password button"
   },
   "h0jHxq": {
     "defaultMessage": "Password",
@@ -227,9 +295,17 @@
     "defaultMessage": "Please enter a password",
     "description": "SigninScreen - error message when input password is empty"
   },
+  "mfzT2i": {
+    "defaultMessage": "Tap to follow the profile",
+    "description": "UserScreenButtonBar follow profile accessibility label"
+  },
   "n8Bdhz": {
     "defaultMessage": "See all",
     "description": "CoverList - See all button"
+  },
+  "nJgiur": {
+    "defaultMessage": "Tap to clear your search",
+    "description": "SearchBar accessibilityLabel Clear Button"
   },
   "nMtsXg": {
     "defaultMessage": "Shadow",
@@ -255,9 +331,17 @@
     "defaultMessage": "Already have an account?",
     "description": "Signup Screen - Already have an account?"
   },
+  "pGovG7": {
+    "defaultMessage": "Top to remove {word} from history",
+    "description": "Recent Search - Accessibiltity Label remove element from history"
+  },
   "pqxK1C": {
     "defaultMessage": "Contrast",
     "description": "Contrast image edition parameters name"
+  },
+  "q/ZByJ": {
+    "defaultMessage": "Thermal",
+    "description": "Thermal photo filter name"
   },
   "qyCo80": {
     "defaultMessage": "Describe your publication",
@@ -275,6 +359,10 @@
     "defaultMessage": "Sign Up",
     "description": "Home screen sign up button label"
   },
+  "uNR58P": {
+    "defaultMessage": "Chrome",
+    "description": "Chrome photo filter name"
+  },
   "ukFVmp": {
     "defaultMessage": "Normal",
     "description": "Name of the default filter (no filter applied) in image edition"
@@ -282,6 +370,18 @@
   "uvBCJV": {
     "defaultMessage": "No recent search for {word}",
     "description": "ResetSearch - message when no history search found"
+  },
+  "v3DENk": {
+    "defaultMessage": "Tap to sign up",
+    "description": "Home Screen - AccessibilityLabel Sign Up button"
+  },
+  "v4LP9H": {
+    "defaultMessage": "Instant",
+    "description": "Instant photo filter name"
+  },
+  "vC6hy9": {
+    "defaultMessage": "X-ray",
+    "description": "X-ray photo filter name"
   },
   "vDm98w": {
     "defaultMessage": "Sharpness",
@@ -318,6 +418,14 @@
   "y37Ei7": {
     "defaultMessage": "Select an album",
     "description": "Title of the album selection modal"
+  },
+  "ymtf7H": {
+    "defaultMessage": "Tap to search for {word}",
+    "description": "Recent Search - Accessibiltity Label remove element from history"
+  },
+  "z7TgL0": {
+    "defaultMessage": "Tonal",
+    "description": "Tonal photo filter name"
   },
   "zMaylR": {
     "defaultMessage": "Take a video",
